Stop using deprecated styles
Also fixes a bug where the cursor would appear in editors that weren't
focussed. This bug was introduced by Atom's auto-migration code
overwriting the `.is-focused` class.

Fixes #8, #5

--- a/styles/pulsing-cursor.atom-text-editor.less
+++ b/styles/pulsing-cursor.atom-text-editor.less
@@ -9,7 +9,7 @@
   visibility: visible !important;
 }
 
-:host(.is-focused) {
+atom-text-editor.is-focused {
   .cursors {
     & > .cursor {
       .pulse-on;
